--- a/performance.ipynb
+++ b/performance.ipynb
@@ -947,13 +947,13 @@
    "source": [
     "## Conclusions\n",
     "\n",
-    "All the performance increases were constant factors. But, this is to be expected and when the difference is between \n",
-    "\n",
     "When you are doing something that is not computationally demanding and the hit from I/O is not huge. The time you spend coding an async or multithreaded is probably not work the small performance increase you may or may not see.\n",
     "\n",
     "When working with networking IO threading can be extremely fast so it is good for things like scraping sites rapidly. However, for most networking tasks you would probably be better served using async with multiple threads because its not all about speed and asynchonity allows you to open up tasks on a different thread so that you can perform other tasks in the mean time which is probably more of what you want if you are designing a server or something of the like.\n",
     "\n",
     "If you are performing a computationally intensive task the performance boost from threading can be significant and might very well be worth it. Just make sure to stay thread safe ;).\n",
+    "\n",
+    "All the performance increases were constant factors. But, this is to be expected and when the difference is between 1 day and 2 that can make a differenc.\n",
     "*******************************************************************************************************************"
    ]
   }
